--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "dependencies": {
         "@react-native-community/async-storage": "^1.7.1",
         "axios": "^0.19.0",
-        "immer": "^5.1.0",
+        "immer": "^8.0.1",
         "react": "16.9.0",
         "react-native": "0.61.5",
+        "react-native-geolocation-service": "^5.1.1",
         "react-native-gesture-handler": "^1.5.2",
+        "react-native-maps": "^0.27.1",
         "react-native-reanimated": "^1.4.0",
         "react-native-screens": "^2.0.0-alpha.22",
         "react-native-vector-icons": "^6.6.0",
