--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
         "@react-native-community/async-storage": "^1.7.1",
         "axios": "^0.19.0",
         "immer": "^8.0.1",
+        "lodash": "^4.17.20",
         "react": "16.9.0",
         "react-native": "0.61.5",
+        "react-native-dotenv": "^2.5.1",
+        "react-native-geocoding": "^0.5.0",
         "react-native-geolocation-service": "^5.1.1",
         "react-native-gesture-handler": "^1.5.2",
         "react-native-maps": "^0.27.1",
