--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
         "test": "jest",
         "lint": "eslint ."
     },
+    "postinstall": "npx patch-package",
     "dependencies": {
         "@react-native-community/async-storage": "^1.7.1",
         "axios": "^0.19.0",
         "immer": "^8.0.1",
         "lodash": "^4.17.20",
+        "lottie-ios": "3.1.8",
+        "lottie-react-native": "^3.5.0",
         "react": "16.9.0",
         "react-native": "0.61.5",
+        "react-native-animatable": "^1.3.3",
         "react-native-dotenv": "^2.5.1",
         "react-native-geocoding": "^0.5.0",
         "react-native-geolocation-service": "^5.1.1",
